Fix a stage style to remove left and bottom margins on mobile

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 
 .stage {
 	position: relative;
+	overflow: hidden;
 }
 
 @media (max-width: 415px) {
